--- a/docs/en-gb/modules/crm/pages/messenger-testphase.adoc
+++ b/docs/en-gb/modules/crm/pages/messenger-testphase.adoc
@@ -9,6 +9,10 @@ The *CRM » Messenger (Test phase)* menu is structured as follows:
 
 image::crm:messenger-menu-structure.png[width=640, height=360]
 
+////
+TODO: farblich markierten Screenshot einfügen.
+////
+
 * *Navigation*: Here you can navigate through different parts of the menu. The currently selected area (blue background) is displayed in the main window on the right. Click on icon:menu[set=material] to expand or collapse the navigation bar. +
 ** Available areas in the navigation: icon:add[set=material] *New message*, Inbox, <<#new-messages, New messages>>, <<#my-messages, My messages>>, <<#trash, Trash>>.
 * *Toolbar*: Here you can <<#search-message, search>> for messages, <<#configure-columns, adjust the columns in the overview>>, set the results to be shown per page and click through the pages with the messages.
@@ -140,7 +144,7 @@ Creating a message:
 
 . Go to *CRM » Messenger (Test phase)*.
 . Click in the top left on icon:add[set=material] *New message*.
-. Enter a value in the *Receiver* field and select the appropriate value from the suggestion list. +
+. Enter a value in the *Add receiver...* field and select the appropriate value from the suggestion list. +
 *_Example:_* If you enter a number, possible receivers with this order ID or contact ID will be suggested (see <<#image-messenger-new-message-suggestion-list>>).
 . Enter the subject of the message in the *Subject* field.
 . Enter the message in the text field.
@@ -150,7 +154,7 @@ Creating a message:
 . Click no icon:forward_to_inbox[set=material] *SEND*.
 
 [[image-messenger-new-message-suggestion-list]]
-.Example: Suggestion list in the receiver field after having entered “102”
+.Example: Suggestion list in the receiver field after having entered “101”
 image::crm:messenger-new-message-suggestion-list.png[width=640, height=360]
 
 [[table-create-new-message]]
@@ -159,46 +163,46 @@ image::crm:messenger-new-message-suggestion-list.png[width=640, height=360]
 |====
 |Setting |Explanation
 
-| *Recipients*
+|[#intable-recipients]*Recipients*
 |Enter a name or ID here and select the appropriate value from the suggestion list (see <<#image-messenger-new-message-suggestion-list>>).
 
-| *Subject*
+|[#intable-subject]*Subject*
 |Enter a subject for the message.
 
-| *Text field*
+|[#intable-text-field]*Text field*
 |Enter the content of the message here.
 
-| *Add attachments* (icon:attach_file[set=material])
+|[#intable-add-attachments]*Add attachments* (icon:attach_file[set=material])
 |Click on icon:attach_file[set=material] to add attachments to your message. Select as many attachments as you like from your computer. +
 The following file types can be sent as an attachment: bmp, csv, gif, jpeg, json, pdf, png, tiff, txt, xlsx, zip.
 
-| *Whisper mode* (icon:visibility[set=material] / icon:visibility_off[set=material, role=skyBlue])
-|You can whisper messages to make these messages only visible for internal purposes but _not_ for your contacts. To do so, click on icon:visibility[set=material]. You can see in this view that a message is whispered by means of the button icon:visibility_off[set=material, role=skyBlue]. The button icon:forward_to_inbox[set=material] *SEND* is changed to icon:visibility_off[set material] *WHISPER*. +
+|[#intable-whisper-mode]*Whisper mode* (icon:visibility[set=material] / icon:visibility_off[set=material, role=skyBlue])
+|You can whisper messages to make these messages only visible for internal purposes but _not_ for your contacts. To do so, click on *Whisper mode* (icon:visibility[set=material]). You can see in this view that a message is whispered by means of the button icon:visibility_off[set=material, role=skyBlue]. The button changes from icon:forward_to_inbox[set=material] *SEND* to icon:visibility_off[set material] *WHISPER*. +
 In the overview, whispered messages are shown in _italics_. +
-*_Note:_* Once the whisper mode has been activated for this message, it is _no longer_ possible to activate the *Bill* button.
+*_Note:_* Once the whisper mode has been activated for this message, you can <<#intable-bill-message, bill the message>>.
 
-| *Assign tags to message* (icon:local_offer[set=material])
-|Click on icon:local_offer[set=material] to search for tags and select already existing tags for the message (icon:check_box[set=material, role=skyBlue], add new tags (icon:add[set=material]) and edit existing tags (icon:edit[set=material]). +
+|[#intable-assign-tags-message]*Assign tags to message* (icon:local_offer[set=material])
+|Click on icon:local_offer[set=material] to search for tags and select already existing tags for the message (icon:check_box[set=material, role=skyBlue]), add new tags (icon:add[set=material]) and edit existing tags (icon:edit[set=material]). +
 *_Note:_* Once you selected a tag for the message, the button is shown in blue icon:local_offer[set=material, role=skyBlue]. This way you can see at a glance whether the message has tags. +
-*_Important:_* To be able to bill the message, you have to create at least one tag of the type *Messages (billable)*.
+*_Important:_* To be able to <<#intable-bill-message, bill>> the message, you have to create at least one tag of the type *Messages (billable)*.
 
-| *Bill message* (icon:more_vert[set=material])
-|You can bill a message if it is _not_ a whispered message. Click on icon:more_vert[set=material] first. If you activate the button *Bill* (icon:toggle_on[set=material, role=skyBlue]), this message will be billed. The button icon:forward_to_inbox [set=material] *SEND* will be changed to icon:forward_to_inbox[set=material] *BILL AND SEND*. +
-*_Note:_* Once the button *Bill* is activated, it is _not_ possible to activate the whisper mode for this message.
+|[#intable-bill-message]*Bill message* (icon:more_vert[set=material])
+|You can always bill a message as long as it is a <<#intable-whisper-mode, whispered message>>. Click on icon:more_vert[set=material] first. If you then activate the button *Bill message* (icon:toggle_on[set=material, role=skyBlue]), this message will be billed. The button changes from icon:forward_to_inbox [set=material] *SEND* to icon:visibility_off[set=material] *BILL AND SEND*. +
+*_Note:_* You can only activate the button *Bill message* if the <<#intable-whisper-mode, whisper mode>> has been activated for this message.
 
-| *Timer* (icon:more_vert[set=material])
+|[#intable-timer]*Timer* (icon:more_vert[set=material])
 |You can start a timer for every message. Click on icon:more_vert[set=material] first. If you activate the *Timer* button (icon:toggle_on[set=material, role=skyBlue]), the timer next to the icon:forward_to_inbox[set=material] *SEND* button will start running automatically. +
 Click on icon:pause_circle[set=material] to stop the timer and on icon:play_circle[set=material] to start the timer again.
 
-| *Manage inboxes*
+|[#intable-manage-inboxes]*Manage inboxes*
 |Click on icon:edit[set=material] *Manage inboxes* to be redirected to the *Setup » Assistants » Basic settings* menu. Here, you can edit the inboxes by using the *Messenger configuration* <<#complete-assistant, assistant>>.
 
-| _Name of the currently selected inbox_
+|[#intable-name-inbox]_Name of the currently selected inbox_
 | Click on icon:arrow_drop_down[set=material] to select another inbox from the drop-down list. The list shows the names of the inboxes that you set up by <<#complete-assistant, completing the assistant>>.
 
-| *SEND*
+|[#intable-send]*SEND*
 |By clicking on icon:forward_to_inbox[set=material] *SEND*, the message will be sent. +
-*_Note:_* If you bill the message, the button changes to icon:forward_to_inbox[set=material] *BILL AND SEND*. If you whisper the message, this button is changed to icon:visibility_off[set=material] *WHISPER*.
+*_Note:_* If you bill the message, the button changes to icon:visibility_off[set=material] *BILL AND SEND*. If you whisper the message, this button is changed to icon:visibility_off[set=material] *WHISPER*.
 
 |====
 
@@ -222,57 +226,57 @@ Searching for a conversation in the Messenger:
 |====
 |Filter |Explanation
 
-| *Subject*
+|[#intable-filter-subject]*Subject*
 |Enter a word to search for conversations containing this word in their subject line.
 
-| *Short ID*
+|[#intable-filter-short-id]*Short ID*
 |Enter the ID of the conversation to only search for the conversation with this ID.
 
-| *From* / *To*
+|[#intable-filter-from-to]*From* / *To*
 |Enter a date or select the dates from the calendars (icon:today[set=material]) to search for conversations within a certain time period.
 
-| *Referrer*
+|[#intable-filter-referrer]*Referrer*
 |Select a referrer to only search for conversations with this referrer. +
 Available options: *Back end*, *REST*, *Plugin* and *PayPal plugin*.
 
-| *Status*
+|[#intable-filter-status]*Status*
 |Select a status to search for conversations with this specific status. +
 Available values: *Done* and *Not done*.
 
-| *Has attachments*
+|[#intable-filter-has-attachments]*Has attachments*
 |Select *Yes* to search for conversations with attached files. Select *No* to search for conversations that have no files attached. 
 
-| *Has billed messages*
+|[#intable-filter-has-billed-messages]*Has billed messages*
 |Select *Yes* to search for conversations that contain billed messages. Select *No* to search for conversations that does not contain any billed messages.
 
-| *Contact ID*
+|[#intable-filter-contact-id]*Contact ID*
 |Enter an ID to only search for conversations that are linked with this contact ID.
 
-| *Order ID*
+|[#intable-filter-order-id]*Order ID*
 |Enter an ID to only search for conversations that are linked with this order ID.
 
-| *Email*
+|[#intable-filter-email]*Email*
 |Enter an email address to search for conversations that contain this email address.
 
-| *Tags*
+|[#intable-filter-tags]*Tags*
 |Select (icon:check_box[set=material, role=skyBlue]) tags to only search for conversations with these <<#tags-messenger, tags>>.
 
-| *Reset*
+|[#intable-filter-reset]*Reset*
 |Resets the selected filter criteria.
 
-| *Search*
+|[#intable-filter-search]*Search*
 |Starts the search. The conversations found are listed in the overview. +
 *_Tip:_* Don’t choose any filters if you want to see all of the conversations in the overview.
 
 |====
 
 [#save-current-filter]
-== Saving the current filters
+== Saving the current filter
 
 When you start a search, your selected filters are displayed up top as so-called “chips”. You can save these filters to apply them again more quickly and easily in the future.
 
 [.instruction]
-Saving the current filters: 
+Saving the current filter: 
 
 . Start a search.
 . Click on *Saved filters* (icon:bookmarks[set=material]).
@@ -319,52 +323,50 @@ You can have the following columns displayed in the overview of the Messenger:
 |====
 |Column |Explanation
 
-|Extend relations
+|[#intable-overview-extend-relations]*Extend relations*
 |Opens the available relations that are linked with the conversation by clicking on icon:chevron_right[set=material].
 
-|Selection
+|[#intable-overview-selection]*Selection*
 |Shows the checkbox for the <<#group-function, group function>> (icon:check_box_outline_blank[set=material]) in the overview.
 
-|Status
+|[#intable-overview-status]*Status*
 |Shows with the symbol icon:circle[set=material, role=skyBlue] that the message is still unread. Shows with the symbol icon:circle[set=material, role=green] that the message is closed.
 
-
-|Short ID
+|[#intable-overview-short-id]*Short ID*
 |Right next to the title bar, click on icon:arrow_upward[set=material] or icon:arrow_downward[set=material] to sort the table in ascending or descending order by the ID.
 
-|Referrer
-|Shows with the symbol the referrer of the message.
+|[#intable-overview-referrer]*Referrer*
+|Shows with the symbol the referrer of the message. +
 
-|Relations
-|The message relations are shown here, for example icon:person[set=material] _Name of the contact (contact ID)_, icon:shopping_cart[set=material] _Order ID_, icon:mail[set=material] _Email address_ and the subscribers of the conversation. In the line of the conversation, click on icon:chevron_right[set=material] to see all available relations at a glance. Click on icon:expand_more[set=material] to close the relation area again. The contact and the order have a direct link to the contact data record respectively to the order.
+|[#intable-overview-relations]*Relations*
+|The conversation relations are shown here, for example icon:person[set=material] _Name of the contact (contact ID)_, icon:shopping_cart[set=material] _Order ID_, icon:mail[set=material] _Email address_ and the subscribers of the conversation. In the line of the conversation, click on icon:chevron_right[set=material] to see all available relations at a glance. Click on icon:expand_more[set=material] to close the relation area again. The contact and the order have a direct link to the contact data record respectively to the order.
 
-|Subject
+|[#intable-overview-subject]*Subject*
 |Shows the subject of the first message within the conversation.
- 
 
-|Created on
+|[#intable-overview-created-at]*Created at*
 |Shows the date and the time when the message was created. Right next to the title bar, click on icon:arrow_upward[set=material] or icon:arrow_downward[set=material] to sort the table in ascending or descending order by the date.
 
-|Updated on
+|[#intable-overview-updated-at]*Updated at*
 |Shows the date and time when the message was updated. Right next to the title bar, click on icon:arrow_upward[set=material] or icon:arrow_downward[set=material] to sort the table in ascending or descending order by the date.
 
-|Tags
+|[#intable-overview-tags]*Tags*
 |Shows the <<#context-menu-tags-conversation, tags>> that are assigned to the conversation.
  
 
-|Attachments
+|[#intable-overview-attachments]*Attachments*
 |The symbol icon:attach_file[set=material] in the *Number of attachments* (icon:attach_file[set=material]) column shows whether the conversation has attachments. When you hover with your mouse over the symbol, you can see how many attachments the conversation has. Right next to the title bar, click on icon:arrow_upward[set=material] to sort the table by the number of orders.
 
-|Billed messages
+|[#intable-overview-billed-messages]*Billed messages*
 |The symbol icon:credit_card[set=material] in the *Billed messages* (icon:credit_card[set=material]) column shows whether the conversation has billed messages. When you hover with your mouse over the symbol, you can see the number of billed messages. Right next to the title bar, click on icon:arrow_upward[set=material] to sort the table by the number of billed messages.
 
-|Billed minutes
+|[#intable-overview-billed-minutes]*Billed minutes*
 |The symbol icon:av_timer[set=material] in the *Billed minutes* (icon:av_timer[set=material]) column shows whether the conversation has billed minutes. When you hover with your mouse over the symbol, you can see the number of billed minutes. Right next to the title bar, click on icon:arrow_upward[set=material] to sort the table by the number of billed minutes.
 
-|Subscribed
-|The column icon:notifications[set=material] shows with the symbol icon:done[set=material] whether you have <<#subscribe-conversation, subscribed for>> the conversation.
+|[#intable-overview-subscribed]*Subscribed*
+|The symbol icon:done[set=material] in the column icon:notifications[set=material] shows whether you have <<#subscribe-conversation, subscribed for>> the conversation.
 
-|Context menu
+|[#intable-overview-context-menu]*Context menu*
 |Allows to edit conversations in the overview using the <<#context-menu, context menu>>.
 
 |====
@@ -424,7 +426,7 @@ Marking a conversation as unread:
 → The line of the conversation is shown in bold and a blue circle icon:circle[set=material, role=skyBlue] appears at the beginning of the line.
 
 [#context-menu-tags-conversation]
-=== Assign tags to conversation
+=== Assigning tags to a conversation
 
 Proceed as described below to assign a tag to a conversation. You can also search for tags that are available for the Messenger. This might also be useful if you really created a lot of tags for the *Messages* or *Messages (billable)* areas.
 
@@ -560,8 +562,8 @@ Billing a message:
 . Click on icon:local_offer[set=material] to assign tags for the message. +
 *_Important:_* To be able to bill messages, you have to create a tag of the type *Messages (billable)* in the *Setup » Settings » Tags* menu.
 . Click on icon:more_vert[set=material].
-. Activate the button *Bill* (icon:toggle_on[set=material, role=skyBlue]).
-. Click on icon:forward_to_inbox[set=material] *BILL AND SEND*. +
+. Activate the button *Bill message* (icon:toggle_on[set=material, role=skyBlue]).
+. Click on icon:visibility_off[set=material] *BILL AND SEND*. +
 → The window *Bill and send* opens.
 . In the *Timer* field, you can see the time that the timer has tracked so far.
 . You can adjust the value in the *Minutes* field, if needed.
@@ -647,27 +649,27 @@ image::crm:messenger-group-functions-conversations.png[width=640, height=360]
 |====
 |Element |Symbol |Explanation
 
-| *Mark conversations as read*
+|[#intable-group-function-mark-conversations-read]*Mark conversations as read*
 |icon:mark_email_read[set=material]
 |Marks all selected conversations as read.
 
-| *Mark conversations as unread*
+|[#intable-group-function-mark-conversations-unread]*Mark conversations as unread*
 |icon:mark_email_unread[set=material]
 |Marks all selected conversations as unread. The conversations are then displayed in bold.
 
-| *Mark conversations as done*
+|[#intable-group-function-mark-conversations-done]*Mark conversations as done*
 |icon:circle[set=material]
 |Marks all selected conversations as done.
 
-| *Mark conversations as not done*
+|[#intable-group-function-mark-conversations-not-done]*Mark conversations as not done*
 |icon:radio_button_unchecked[set=material]
 |Marks all selected conversations as not done.
 
-| *Assign tags to conversations*
+|[#intable-group-function-assign-tags-conversations]*Assign tags to conversations*
 |icon:local_offer[set=material]
 |Assigns the desired tag to all selected conversations.
 
-| *Delete conversation*
+|[#intable-group-function-delete-conversations]*Delete conversations*
 |icon:delete[set=material]
 |Deletes all selected conversations after having confirmed your decision.
 
@@ -690,52 +692,52 @@ You can have the following columns displayed in the *New messages* folder of the
 |====
 |Column |Explanation
 
-|Extend relations
+|[#intable-new-messages-extend-relations]*Extend relations*
 |Opens the available relations that are linked with the conversation by clicking on icon:chevron_right[set=material].
 
-|Selection
+|[#intable-new-messages-selection]*Selection*
 |Shows the checkbox for the <<#group-function, group function>> (icon:check_box_outline_blank[set=material]) in the overview.
 
-|Status
+|[#intable-new-messages-status]*Status*
 |Shows with the symbol icon:circle[set=material, role=skyBlue] that the message is still unread. Shows with the symbol icon:circle[set=material, role=green] that the message is closed.
 
 
-|Short ID
+|[#intable-new-messages-short-id]*Short ID*
 |Right next to the title bar, click on icon:arrow_upward[set=material] or icon:arrow_downward[set=material] to sort the table in ascending or descending order by the ID.
 
-|Referrer
-|Shows with the symbol the referrer of the message.
+|[#intable-new-messages-referrer]*Referrer*
+|Shows with the symbol the referrer of the message. +
 
-|Relations
-|The message relations are shown here, for example icon:person[set=material] _Name of the contact (contact ID)_, icon:shopping_cart[set=material] _Order ID_, icon:mail[set=material] _Email address_ and the subscribers of the conversation. In the line of the conversation, click on icon:chevron_right[set=material] to see all available relations at a glance. Click on icon:expand_more[set=material] to close the relation area again. The contact and the order have a direct link to the contact data record respectively to the order.
+|[#intable-new-messages-relations]*Relations*
+|The conversation relations are shown here, for example icon:person[set=material] _Name of the contact (contact ID)_, icon:shopping_cart[set=material] _Order ID_, icon:mail[set=material] _Email address_ and the subscribers of the conversation. In the line of the conversation, click on icon:chevron_right[set=material] to see all available relations at a glance. Click on icon:expand_more[set=material] to close the relation area again. The contact and the order have a direct link to the contact data record respectively to the order.
 
-|Subject
+|[#intable-new-messages-subject]*Subject*
 |Shows the subject of the first message within the conversation.
  
 
-|Created on
+|[#intable-new-messages-created-at]*Created at*
 |Shows the date and the time when the message was created. Right next to the title bar, click on icon:arrow_upward[set=material] or icon:arrow_downward[set=material] to sort the table in ascending or descending order by the date.
 
-|Updated on
+|[#intable-new-messages-updated-at]*Updated at*
 |Shows the date and time when the message was updated. Right next to the title bar, click on icon:arrow_upward[set=material] or icon:arrow_downward[set=material] to sort the table in ascending or descending order by the date.
 
-|Tags
+|[#intable-new-messages-tags]*Tags*
 |Shows the <<#context-menu-tags-conversation, tags>> that are assigned to the conversation.
  
 
-|Attachments
+|[#intable-new-messages-attachments]*Attachments*
 |The symbol icon:attach_file[set=material] in the *Number of attachments* (icon:attach_file[set=material]) column shows whether the conversation has attachments. When you hover with your mouse over the symbol, you can see how many attachments the conversation has. Right next to the title bar, click on icon:arrow_upward[set=material] to sort the table by the number of orders.
 
-|Billed messages
+|[#intable-new-messages-billed-messages]*Billed messages*
 |The symbol icon:credit_card[set=material] in the *Billed messages* (icon:credit_card[set=material]) column shows whether the conversation has billed messages. When you hover with your mouse over the symbol, you can see the number of billed messages. Right next to the title bar, click on icon:arrow_upward[set=material] to sort the table by the number of billed messages.
 
-|Billed minutes
+|[#intable-new-messages-billed-minutes]*Billed minutes*
 |The symbol icon:av_timer[set=material] in the *Billed minutes* (icon:av_timer[set=material]) column shows whether the conversation has billed minutes. When you hover with your mouse over the symbol, you can see the number of billed minutes. Right next to the title bar, click on icon:arrow_upward[set=material] to sort the table by the number of billed minutes.
 
-|Subscribed
+|[#intable-new-messages-subscribed]*Subscribed*
 |The column icon:notifications[set=material] shows with the symbol icon:done[set=material] whether you have <<#subscribe-conversation, subscribed for>> the conversation.
 
-|Context menu
+|[#intable-new-messages-context-menu]*Context menu*
 |Allows to edit conversations in the overview using the <<#context-menu, context menu>>.
 
 |====
@@ -759,51 +761,52 @@ You can have the following columns displayed in the *My messages* folder of the 
 |====
 |Column |Explanation
 
-|Extend relations
+|[#intable-my-messages-extend-relations]*Extend relations*
 |Opens the available relations that are linked with the conversation by clicking on icon:chevron_right[set=material].
 
-|Selection
+|[#intable-my-messages-selection]*Selection*
 |Shows the checkbox for the <<#group-function, group function>> (icon:check_box_outline_blank[set=material]) in the overview.
 
-|Status
+|[#intable-my-messages-status]*Status*
 |Shows with the symbol icon:circle[set=material, role=skyBlue] that the message is still unread. Shows with the symbol icon:circle[set=material, role=green] that the message is closed.
 
 
-|Short ID
+|[#intable-my-messages-short-id]*Short ID*
 |Right next to the title bar, click on icon:arrow_upward[set=material] or icon:arrow_downward[set=material] to sort the table in ascending or descending order by the ID.
 
-|Referrer
-|Shows with the symbol the referrer of the message.
+|[#intable-my-messages-referrer]*Referrer*
+|Shows with the symbol the referrer of the message. +
 
-|Relations
-|The message relations are shown here, for example icon:person[set=material] _Name of the contact (contact ID)_, icon:shopping_cart[set=material] _Order ID_, icon:mail[set=material] _Email address_ and the subscribers of the conversation. In the line of the conversation, click on icon:chevron_right[set=material] to see all available relations at a glance. Click on icon:expand_more[set=material] to close the relation area again. The contact and the order have a direct link to the contact data record respectively to the order.
+|[#intable-my-messages-relations]*Relations*
+|The conversation relations are shown here, for example icon:person[set=material] _Name of the contact (contact ID)_, icon:shopping_cart[set=material] _Order ID_, icon:mail[set=material] _Email address_ and the subscribers of the conversation. In the line of the conversation, click on icon:chevron_right[set=material] to see all available relations at a glance. Click on icon:expand_more[set=material] to close the relation area again. The contact and the order have a direct link to the contact data record respectively to the order.
 
-|Subject
+|[#intable-my-messages-subject]*Subject*
 |Shows the subject of the first message within the conversation.
  
 
-|Created on
+|[#intable-my-messages-created-at]*Created at*
 |Shows the date and the time when the message was created. Right next to the title bar, click on icon:arrow_upward[set=material] or icon:arrow_downward[set=material] to sort the table in ascending or descending order by the date.
 
-|Updated on
+|[#intable-my-messages-updated-at]*Updated at*
 |Shows the date and time when the message was updated. Right next to the title bar, click on icon:arrow_upward[set=material] or icon:arrow_downward[set=material] to sort the table in ascending or descending order by the date.
 
-|Tags
+|[#intable-my-messages-tags]*Tags*
 |Shows the <<#context-menu-tags-conversation, tags>> that are assigned to the conversation.
+ 
 
-|Attachments
+|[#intable-my-messages-attachments]*Attachments*
 |The symbol icon:attach_file[set=material] in the *Number of attachments* (icon:attach_file[set=material]) column shows whether the conversation has attachments. When you hover with your mouse over the symbol, you can see how many attachments the conversation has. Right next to the title bar, click on icon:arrow_upward[set=material] to sort the table by the number of orders.
 
-|Billed messages
+|[#intable-my-messages-billed-messages]*Billed messages*
 |The symbol icon:credit_card[set=material] in the *Billed messages* (icon:credit_card[set=material]) column shows whether the conversation has billed messages. When you hover with your mouse over the symbol, you can see the number of billed messages. Right next to the title bar, click on icon:arrow_upward[set=material] to sort the table by the number of billed messages.
 
-|Billed minutes
+|[#intable-my-messages-billed-minutes]*Billed minutes*
 |The symbol icon:av_timer[set=material] in the *Billed minutes* (icon:av_timer[set=material]) column shows whether the conversation has billed minutes. When you hover with your mouse over the symbol, you can see the number of billed minutes. Right next to the title bar, click on icon:arrow_upward[set=material] to sort the table by the number of billed minutes.
 
-|Subscribed
-|The column icon:notifications[set=material] shows with the symbol icon:done[set=material] whether you have <<#subscribe-conversation, subscribed for>> the conversation.
+|[#intable-my-messages-subscribed]*Subscribed*
+|The symbol icon:done[set=material] in the column icon:notifications[set=material] shows whether you have <<#subscribe-conversation, subscribed for>> the conversation.
 
-|Context menu
+|[#intable-my-messages-context-menu]*Context menu*
 |Allows to edit conversations in the overview using the <<#context-menu, context menu>>.
 
 |====
@@ -827,51 +830,52 @@ You can have the following columns displayed in the trash folder of the Messenge
 |====
 |Column |Explanation
 
-|Extend relations
+|[#intable-trash-extend-relations]*Extend relations*
 |Opens the available relations that are linked with the conversation by clicking on icon:chevron_right[set=material].
 
-|Selection
+|[#intable-trash-selection]*Selection*
 |Shows the checkbox for the <<#group-function, group function>> (icon:check_box_outline_blank[set=material]) in the overview.
 
-|Status
+|[#intable-trash-status]*Status*
 |Shows with the symbol icon:circle[set=material, role=skyBlue] that the message is still unread. Shows with the symbol icon:circle[set=material, role=green] that the message is closed.
 
 
-|Short ID
+|[#intable-trash-short-id]*Short ID*
 |Right next to the title bar, click on icon:arrow_upward[set=material] or icon:arrow_downward[set=material] to sort the table in ascending or descending order by the ID.
 
-|Referrer
-|Shows with the symbol the referrer of the message.
+|[#intable-trash-referrer]*Referrer*
+|Shows with the symbol the referrer of the message. +
+// ** Possible values: 
 
-|Relations
-|The message relations are shown here, for example icon:person[set=material] _Name of the contact (contact ID)_, icon:shopping_cart[set=material] _Order ID_, icon:mail[set=material] _Email address_ and the subscribers of the conversation. In the line of the conversation, click on icon:chevron_right[set=material] to see all available relations at a glance. Click on icon:expand_more[set=material] to close the relation area again. The contact and the order have a direct link to the contact data record respectively to the order.
+|[#intable-trash-relations]*Relations*
+|The conversation relations are shown here, for example icon:person[set=material] _Name of the contact (contact ID)_, icon:shopping_cart[set=material] _Order ID_, icon:mail[set=material] _Email address_ and the subscribers of the conversation. In the line of the conversation, click on icon:chevron_right[set=material] to see all available relations at a glance. Click on icon:expand_more[set=material] to close the relation area again. The contact and the order have a direct link to the contact data record respectively to the order.
 
-|Subject
+|[#intable-trash-subject]*Subject*
 |Shows the subject of the first message within the conversation.
  
 
-|Created on
+|[#intable-trash-created-at]*Created at*
 |Shows the date and the time when the message was created. Right next to the title bar, click on icon:arrow_upward[set=material] or icon:arrow_downward[set=material] to sort the table in ascending or descending order by the date.
 
-|Updated on
+|[#intable-trash-updated-at]*Updated at*
 |Shows the date and time when the message was updated. Right next to the title bar, click on icon:arrow_upward[set=material] or icon:arrow_downward[set=material] to sort the table in ascending or descending order by the date.
 
-|Tags
+|[#intable-trash-tags]*Tags*
 |Shows the <<#context-menu-tags-conversation, tags>> that are assigned to the conversation.
 
-|Attachments
+|[#intable-trash-attachments]*Attachments*
 |The symbol icon:attach_file[set=material] in the *Number of attachments* (icon:attach_file[set=material]) column shows whether the conversation has attachments. When you hover with your mouse over the symbol, you can see how many attachments the conversation has. Right next to the title bar, click on icon:arrow_upward[set=material] to sort the table by the number of orders.
 
-|Billed messages
+|[#intable-trash-billed-messages]*Billed messages*
 |The symbol icon:credit_card[set=material] in the *Billed messages* (icon:credit_card[set=material]) column shows whether the conversation has billed messages. When you hover with your mouse over the symbol, you can see the number of billed messages. Right next to the title bar, click on icon:arrow_upward[set=material] to sort the table by the number of billed messages.
 
-|Billed minutes
+|[#intable-trash-billed-minutes]*Billed minutes*
 |The symbol icon:av_timer[set=material] in the *Billed minutes* (icon:av_timer[set=material]) column shows whether the conversation has billed minutes. When you hover with your mouse over the symbol, you can see the number of billed minutes. Right next to the title bar, click on icon:arrow_upward[set=material] to sort the table by the number of billed minutes.
 
-|Subscribed
-|The column icon:notifications[set=material] shows with the symbol icon:done[set=material] whether you have <<#subscribe-conversation, subscribed for>> the conversation.
+|[#intable-trash-subscribed]*Subscribed*
+|The symbol icon:done[set=material] in the column icon:notifications[set=material] shows whether you have <<#subscribe-conversation, subscribed for>> the conversation.
 
-|Context menu
+|[#intable-trash-context-menu]*Context menu*
 |Allows to edit conversations in the overview using the <<#context-menu, context menu>>.
 
 |====
