feat: add plugin updates

--- a/docs/de-de/modules/changelog/pages/2022-05-25.adoc
+++ b/docs/de-de/modules/changelog/pages/2022-05-25.adoc
@@ -105,9 +105,133 @@ Folgende Plugins wurden in den letzten 7 Tagen in einer neuen Version auf plenty
 |===
 |Plugin-Name |Version |To-do
 
-|
-|
-|
+|link:https://marketplace.plentymarkets.com/addphonetoorderwidget_54796[Abfrage der Telefonnummer nach Bestellabschluss - Widget^]
+|1.0.6
+|-
+
+|link:https://marketplace.plentymarkets.com/addresscheckdhl_6455[AddressCheckDHL^]
+|1.2.0
+|-
+
+|link:https://marketplace.plentymarkets.com/d2gpmpluginchangeorderwarehouse_54968[Auftragslagerwechsel Plugin^]
+|1.1.3
+|-
+
+|link:https://marketplace.plentymarkets.com/elasticexportbilligerde_4901[billiger.de^]
+|1.1.12
+|-
+
+|link:https://marketplace.plentymarkets.com/blog_6103[Blog^]
+|2.0.3
+|-
+
+|link:https://marketplace.plentymarkets.com/dpdshippingservices_6320[DPD Versand Services^]
+|1.7.13
+|-
+
+|link:https://marketplace.plentymarkets.com/cfourcereselectronic5_6861[Electronic Theme^]
+|5.1.14
+|-
+
+|link:https://marketplace.plentymarkets.com/etsy_4689[Etsy^]
+|2.1.16
+|-
+
+|link:https://marketplace.plentymarkets.com/cfourceresfashionadvanced_5403[Fashion PRO Theme^]
+|5.1.0
+|plentyShop LTS und IO v.5.0.50 sind erforderlich
+
+|link:https://marketplace.plentymarkets.com/cfourceresfashion5_6864[Fashion Theme^]
+|5.1.3
+|-
+
+|link:https://marketplace.plentymarkets.com/formatdesigner_6483[FormatDesigner^]
+|1.3.2
+|-
+
+|link:https://marketplace.plentymarkets.com/cfourceresfurniture5_6866[Furniture Theme^]
+|5.1.0
+|plentyShop LTS und IO v.5.0.50 sind erforderlich
+
+|link:https://marketplace.plentymarkets.com/elasticexportgoogleshopping_4722[Google Shopping^]
+|1.2.13
+|-
+
+|link:https://marketplace.plentymarkets.com/elasticexportguenstigerde_4745[guenstiger.de^]
+|1.0.17
+|-
+
+|link:https://marketplace.plentymarkets.com/cfourmanufacturersliderwidget_6905[Hersteller Slider Widget^]
+|1.0.3
+|plentyShop LTS und IO v.5.0.50 sind erforderlich
+
+|link:https://marketplace.plentymarkets.com/cfourhtmlwidget_6845[HTML Widget^]
+|1.0.2
+|-
+
+|link:https://marketplace.plentymarkets.com/ingenicozvt_5140[IngenicoZVT^]
+|1.0.5
+|-
+
+|link:https://marketplace.plentymarkets.com/invoice_4760[Kauf auf Rechnung^]
+|2.0.10
+|-
+
+|link:https://marketplace.plentymarkets.com/mirakl_6917[Mirakl Connector^]
+|1.1.65
+|-
+
+|link:https://marketplace.plentymarkets.com/mollie_6272[Mollie^]
+|2.8.10
+|-
+
+|link:https://marketplace.plentymarkets.com/multicontentwidget_6082[Multicontent Toolbox^]
+|4.7.12
+|-
+
+|link:https://marketplace.plentymarkets.com/ceres_4697[plentyShop^]
+|5.0.51
+a|Im Zuge des Releases von Ceres 5.0.51 gab es Änderungen an Template-Dateien, die für Theme-Entwickler relevant sind. Die Verlinkung führt direkt zu der umgesetzten Änderung in den entsprechenden Dateien.
+
+* link:https://github.com/plentymarkets/plugin-ceres/pull/3275/files#diff-49e9a28ec33181e8fd3720d39345363b8b0614f2bf29ceb66b403ef22c18bd4d[resources/views/Checkout/OrderDetails.twig^]
+* link:https://github.com/plentymarkets/plugin-ceres/pull/3275/files#diff-dcc9c181484eba069617434b9c7c20b7906e9ab74907f134720e220a818c968a[resources/views/MyAccount/Partials/OrderHistoryListItemDetails.twig^]
+* link:https://github.com/plentymarkets/plugin-ceres/pull/3275/files#diff-2cee15b4b8add92d304d2f4cbbb5a5891a5752c533b564f1e1d152982c1e62d0[resources/views/Widgets/OrderConfirmation/PurchasedItemsWidget.twig^]
+
+|link:https://marketplace.plentymarkets.com/trustamiproduct_6781[Produktbewertungen & Google Sterne | Trustami^]
+|1.1.1
+|-
+
+|link:https://marketplace.plentymarkets.com/shopify_4944[Shopify.com^]
+|2.0.11
+|-
+
+|link:https://marketplace.plentymarkets.com/trustami_5496[Siegel für Shop Bewertungen + Google Sterne | Trustami^]
+|1.0.9
+|-
+
+|link:https://marketplace.plentymarkets.com/sumup_5141[SumUp^]
+|1.0.4
+|-
+
+|link:https://marketplace.plentymarkets.com/uniservaddresscleansing_6869[Uniserv Address Cleansing^]
+|1.1.9
+|-
+
+|link:https://marketplace.plentymarkets.com/verifonezvt_5504[VerifoneZVT^]
+|1.0.3
+|-
+
+|link:https://marketplace.plentymarkets.com/wayfair_6273[Wayfair^]
+|1.2.4
+|-
+
+|link:https://marketplace.plentymarkets.com/cfouryoutubewidget_5708[Youtube Widget^]
+|1.0.5
+|plentyShop LTS und IO v.5.0.50 sind erforderlich
+
+|link:https://marketplace.plentymarkets.com/zettle_54918[Zettle by PayPal^]
+|1.0.10
+|-
 
 |===
 
