feat: update plugin faq

--- a/docs/en-gb/modules/plugins/pages/faq-plugins.adoc
+++ b/docs/en-gb/modules/plugins/pages/faq-plugins.adoc
@@ -6,6 +6,15 @@
 
 This page contains frequently asked questions about plugins.
 
+[#php-8]
+== PHP 8 update
+
+This section discusses frequently asked questions concerning plugin and PHP 8.
+
+[qanda]
+Are the plugins I use compatible with PHP 8?::
+    Open your plugin set and check the *PHP 8* column. If there's a checkmark, the plugin is compatible with PHP 8. Note that this information is provided by the plugin developer. Also, refer to the lists of plugins developer link:https://forum.plentymarkets.com/t/liste-der-mit-php8-kompatiblen-plentymarkets-plugins-stand-18-05-2022-php8-compatible-plugin-versions/679787[by plentysystems^] and link:https://forum.plentymarkets.com/t/liste-der-mit-php8-kompatiblen-non-plentymarkets-plugins-php8-compatible-non-plentymarkets-plugins/680277[third parties^] in the forum.
+
 [#adding-plugins-system]
 == Adding plugins to the system
 
